--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^18.2.0",
     "react-id-generator": "^3.0.2",
     "react-scripts": "5.0.1",
+    "sha256": "^0.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
