--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "big.js": "^6.2.1",
     "copy-to-clipboard": "^3.3.3",
+    "crypto-js": "^4.2.0",
     "react": "^18.2.0",
     "react-chrome-extension-router": "^1.4.0",
     "react-dom": "^18.2.0",
