--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "big.js": "^6.2.1",
+    "buffer": "^6.0.3",
     "copy-to-clipboard": "^3.3.3",
     "crypto-js": "^4.2.0",
     "node-forge": "^1.3.1",
