--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "buffer": "^6.0.3",
     "copy-to-clipboard": "^3.3.3",
     "crypto-js": "^4.2.0",
+    "decimal.js": "^10.4.3",
     "node-forge": "^1.3.1",
     "react": "^18.2.0",
     "react-chrome-extension-router": "^1.4.0",
