--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "copy-to-clipboard": "^3.3.3",
     "crypto-js": "^4.2.0",
     "decimal.js": "^10.4.3",
+    "json-bigint": "^1.0.0",
     "node-forge": "^1.3.1",
     "react": "^18.2.0",
     "react-chrome-extension-router": "^1.4.0",
