--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "webpack --mode production",
+    "build": "webpack --mode production --watch",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
