--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "outDir": "./dist",
-    "allowJs": true
+    "allowJs": true,
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules"]
