--- a/.eslintrc
+++ b/.eslintrc
@@ -1,9 +1,63 @@
 {
-  "extends": ["react-app", "prettier"],
+  "extends": [
+   	"airbnb-base",
+	"plugin:@typescript-eslint/recommended",
+	"plugin:prettier/recommended",
+	"prettier"
+  ],
+  "env": {
+		"es2021": true,
+		"node": true
+	},
+  "parser": "@typescript-eslint/parser",
+	"plugins": ["@typescript-eslint", "import"],
+  "parserOptions": {
+		"ecmaVersion": "latest",
+		"sourceType": "module",
+		"project": "./tsconfig.json"
+	},
   "rules": {
-    "jsx-quotes": [1, "prefer-double"],
-    "react-hooks/exhaustive-deps": "off",
-    "jsonc/json-files": "off"
-  },
-  "plugins": ["prettier"]
+    "no-console": "off",
+		"no-void": "off",
+		"import/extensions": "off",
+		"no-unused-vars": "off",
+		"@typescript-eslint/no-unused-vars": [
+			"warn",
+			{
+				"argsIgnorePattern": "^_",
+				"ignoreRestSiblings": true,
+				"vars": "all"
+			}
+		],
+		"import/no-unresolved": "off",
+		"no-async-promise-executor": "off",
+		"no-use-before-define": ["error", { "functions": false, "classes": true, "variables": true }],
+		"func-names": "off",
+		"consistent-return": "off",
+		"no-restricted-syntax": "off",
+		"class-methods-use-this": "off",
+		"@typescript-eslint/explicit-member-accessibility": "off",
+		"@typescript-eslint/no-explicit-any": "error",
+		"lines-between-class-members": "off",
+		"camelcase": "off",
+		"no-underscore-dangle": "off",
+		"no-shadow": "off",
+		"no-await-in-loop": "off",
+		"radix": "off",
+		"no-plusplus": "off",
+		"no-promise-executor-return": "off",
+		"import/no-duplicates": "off",
+		"import/prefer-default-export": "off",
+		"import/no-cycle": "off",
+		"no-continue": "off",
+		"no-useless-return": "off",
+		"no-param-reassign": "off",
+		"no-useless-escape": "off",
+		"@typescript-eslint/ban-ts-comment": "off",
+		"array-callback-return": "off",
+		"no-loop-func": "warn",
+		"max-classes-per-file": "off",
+		"react-hooks/exhaustive-deps": "off",
+		"@typescript-eslint/no-non-null-assertion": "off"
+  }
 }
