--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,7 +3,7 @@
   "name": "Zano Companion",
   "version": "1.1.5",
   "description": "A browser extension for Zano wallet app",
-  "permissions": ["storage"],
+  "permissions": ["storage", "network"],
   "content_security_policy": {
     "extension_pages": "script-src 'self'; object-src 'self'; connect-src 'self' http://localhost:* https://api.coingecko.com https://api.zano.org;"
   },
