--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
 		"react-chrome-extension-router": "^1.4.0",
 		"react-dom": "^18.2.0",
 		"react-id-generator": "^3.0.2",
-		"react-scripts": "5.0.1",
 		"sha256": "^0.2.0",
 		"web-vitals": "^2.1.4"
 	},
@@ -91,6 +90,7 @@
 		"url-loader": "^4.1.1",
 		"webpack": "^5.96.1",
 		"webpack-cli": "^5.1.4",
-		"webpack-merge": "^5.8.0"
+		"webpack-merge": "^5.8.0",
+		"react-scripts": "5.0.1"
 	}
 }
