--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"copy-to-clipboard": "^3.3.3",
 		"crypto-js": "^4.2.0",
 		"decimal.js": "^10.4.3",
+		"dompurify": "^3.3.1",
 		"json-bigint": "^1.0.0",
 		"node-forge": "^1.3.2",
 		"react": "^18.2.0",
@@ -82,6 +83,7 @@
 		"husky": "^9.1.7",
 		"lint-staged": "^16.1.2",
 		"prettier": "^3.5.3",
+		"react-scripts": "5.0.1",
 		"sass": "^1.62.0",
 		"sass-loader": "^13.3.3",
 		"style-loader": "^3.3.4",
@@ -90,7 +92,6 @@
 		"url-loader": "^4.1.1",
 		"webpack": "^5.96.1",
 		"webpack-cli": "^5.1.4",
-		"webpack-merge": "^5.8.0",
-		"react-scripts": "5.0.1"
+		"webpack-merge": "^5.8.0"
 	}
 }
