--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
 		"react-dom": "^18.2.0",
 		"react-id-generator": "^3.0.2",
 		"sha256": "^0.2.0",
-		"web-vitals": "^2.1.4"
+		"web-vitals": "^2.1.4",
+		"zano_web3": "^9.2.0"
 	},
 	"scripts": {
 		"start": "react-scripts start",
